tests/fixtures/invalid/pow_str_list_none.py
# Cannot call pow() with Str, List[int], None
x = pow("hello", [1, 2, 3], None)
